<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My Board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="What_do_you_want_to_remember_to_do">What do you want to remember to do?</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="when">When dou you want to do it?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thusrday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time">At what time?</string>
    <string name="set_Time">Set Time</string>
</resources>